kyverno/bmc-emulation-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: bmc-emulation-policy
spec:
  rules:
    - name: bmc-emulation-policy
      skipBackgroundRequests: false
      match:
        any:
        - resources:
            kinds:
            - Pod
            operations:
            - CREATE
            selector:
              matchLabels:
                bmc-emulation: "true"
                kubevirt.io: virt-launcher
      mutate:
        patchStrategicMerge:
          spec:
            containers:
              - name: sushy-tools
                image: "quay.io/metal3-io/sushy-tools:release-32.0"
                imagePullPolicy: "IfNotPresent"
                #restartPolicy: Always
                volumeMounts:
                - name: libvirt-runtime
                  mountPath: /var/run/libvirt
                ports:
                - name: bmc
                  containerPort: 8000  
                env:
                - name: SUSHY_EMULATOR_LISTEN_IP
                  value: "0.0.0.0"
                - name: SUSHY_EMULATOR_LISTEN_PORT
                  value: "8000"
                - name: SUSHY_EMULATOR_SSL_CERT
                  value: None
                - name: SUSHY_EMULATOR_SSL_KEY
                  value: None
                - name: SUSHY_EMULATOR_OS_CLOUD
                  value: None
                - name: SUSHY_EMULATOR_LIBVIRT_URI
                  #value: "qemu:///session"
                  value: qemu+unix:///session?socket=/var/run/libvirt/virtqemud-sock
                - name: SUSHY_EMULATOR_IGNORE_BOOT_DEVICE
                  value: "True"
                - name: SUSHY_EMULATOR_BOOT_LOADER_MAP
                  value: | 
                    {
                      "UEFI": {
                          "x86_64": "/usr/share/OVMF/OVMF_CODE.secboot.fd"
                      },
                      "Legacy": {
                          "x86_64": None
                      }
                    }
